<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ejercicio1"
    android:orientation="vertical"
    android:padding="20sp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contenido_a_escribir">
    </TextView>
    <EditText
        android:id="@+id/txtAEscribir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="text"
        tools:ignore="LabelFor">
    </EditText>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <Button
            android:id="@+id/btnAniadirFichInterno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aniadir_fich_int"
            android:textSize="9sp"
            android:layout_marginHorizontal="5sp"
            android:onClick="escribirInterno"
            tools:ignore="OnClick,SmallSp"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
        <Button
            android:id="@+id/btnAniadirFichExterno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aniadir_fich_ext"
            android:textSize="9sp"
            android:layout_marginHorizontal="5sp"
            android:onClick="escribirExterno"
            tools:ignore="OnClick,SmallSp"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <Button
            android:id="@+id/btnLeerFichInterno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leer_fich_int"
            android:textSize="9sp"
            android:layout_marginHorizontal="5sp"
            android:onClick="leerInterno"
            tools:ignore="OnClick,SmallSp"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
        <Button
            android:id="@+id/btnLeerFichExterno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leer_fich_ext"
            android:textSize="9sp"
            android:layout_marginHorizontal="5sp"
            android:onClick="leerExterno"
            tools:ignore="OnClick,SmallSp"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
        <Button
            android:id="@+id/btnLeerRecurso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leer_recurso"
            android:textSize="9sp"
            android:layout_marginHorizontal="5sp"
            android:onClick="leerRecurso"
            tools:ignore="OnClick,SmallSp"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <Button
            android:id="@+id/btnBorrarFichInterno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/borrar_fichero_interno"
            android:textSize="9sp"
            android:layout_marginHorizontal="5sp"
            android:onClick="borrarInterno"
            tools:ignore="OnClick,SmallSp"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
        <Button
            android:id="@+id/btnBorrarFichExterno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/borrar_fichero_externo"
            android:textSize="9sp"
            android:layout_marginHorizontal="5sp"
            android:onClick="borrarExterno"
            tools:ignore="OnClick,SmallSp"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/el_contenido_del_fichero_es">
    </TextView>
    <TextView
        android:id="@+id/contenidoFichero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>
</LinearLayout>