<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity"
android:orientation="vertical"
android:padding="20sp">

<Button
    android:id="@+id/btnLeerFichInterno"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="5sp"
    android:onClick="ejercicio1"
    android:text="@string/ejercicio_1"
    android:textSize="9sp"
    tools:ignore="SmallSp" />

<Button
    android:id="@+id/btnLeerFichExterno"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="5sp"
    android:onClick="ejercicio2"
    android:text="@string/ejercicio_2"
    android:textSize="9sp"
    tools:ignore="SmallSp" />

<Button
    android:id="@+id/btnLeerRecurso"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="5sp"
    android:onClick="ejercicio3"
    android:text="@string/ejercicio3"
    android:textSize="9sp"
    tools:ignore="SmallSp" />

</LinearLayout>